--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build-dev": "postcss src/css/main.css -o public/css/main.css --watch"
+    "build-dev": "postcss src/css/*.css --dir public/css/ --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
+    "connect-session-sequelize": "^7.0.4",
+    "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
@@ -25,6 +29,7 @@
   "devDependencies": {
     "postcss": "^8.1.4",
     "postcss-cli": "^8.2.0",
+    "sequelize-cli": "^6.2.0",
     "tailwindcss": "^1.9.6"
   }
 }
