--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+NODE_ENV=production
 APP_SECRET=
 
 DB_TYPE=mysql
@@ -7,4 +8,5 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=
 IPGEO_API_KEY=
