--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,12 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 TELEGRAM_BOT_TOKEN=
+TELEGRAM_BOT_USERNAME=loltestwhyBot
 TELEGRAM_CHAT_ID=
+TELEGRAM_CHAT_LINK="https://t.me/joinchat/N2pvSw37JTrunBOVOv_9hg"
+
 IPGEO_API_KEY=
+
+TWILIO_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE_NUMBER=
