add start script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "build-dev": "postcss src/css/*.css --dir public/css/ --watch"
   },
   "keywords": [],
