--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "migrate-db": "sequelize db:migrate",
     "seed-db": "sequelize db:seed:all",
     "reset-db": "sequelize db:drop && sequelize db:create && sequelize db:migrate && sequelize db:seed:all",
-    "build-dev": "postcss src/css/*.css --dir public/css/ --watch"
+    "build-dev": "postcss src/css/*.css --dir public/css/"
   },
   "keywords": [],
   "author": "",
@@ -34,6 +34,7 @@
     "twilio": "^3.50.0"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^3.0.0",
     "postcss": "^8.1.4",
     "postcss-cli": "^8.2.0",
     "sequelize-cli": "^6.2.0",
