--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "migrate-db": "sequelize db:migrate",
     "seed-db": "sequelize db:seed:all",
     "reset-db": "sequelize db:drop && sequelize db:create && sequelize db:migrate && sequelize db:seed:all",
-    "build-dev": "postcss src/css/*.css --dir public/css/"
+    "build": "postcss src/css/*.css --dir public/css/"
   },
   "keywords": [],
   "author": "",
